syntax = "proto3";

package common;

message SortTuple {
  string field = 1;
  string order = 2;
}

message VoidResponse {
  bool ok = 1;
  string error = 2;
}