syntax = "proto3";

package room_hook;

import "common.proto";

service RoomHookService {
  rpc CreateRoomHook(CreateRoomHookRequest) returns (RoomHook) {}
  rpc FindRoomHookList(FindRoomHookListRequest)
      returns (FindRoomHookListResponse) {}
  rpc UpdateRoomHook(UpdateRoomHookRequest) returns (RoomHook) {}
  rpc DeleteRoomHook(DeleteRoomHookRequest) returns (common.VoidResponse) {}
}

message UpdateRoomHookRequest {
  string id = 1;
  optional string url = 2;
  optional string method = 3;
  optional string body = 4;
  optional string header = 5;
  optional string type = 6;
}

message DeleteRoomHookRequest { string id = 1; }

message CreateRoomHookRequest {
  string room_id = 1;
  string url = 2;
  string method = 3;
  string body = 4;
  string header = 5;
  string type = 6;
  string creator_id = 7;
}

message FindRoomHookListRequest {
  string room_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message FindRoomHookListResponse {
  repeated RoomHook data = 1;
  int32 total = 2;
}

message RoomHook {
  string id = 1;
  string room_id = 2;
  string url = 3;
  string method = 4;
  string body = 5;
  string header = 6;
  string type = 7;
  string created_time = 8;
  string updated_time = 9;
  string creator_id = 10;
}
